# uv-split-markers-test

./: README.md  pyproject.toml  renovate.json  run-tests.sh  runpyversion.sh
.github/workflows/: test.yml
tests/: test_smoke.py
