[project]
name = "uv-split-markers-test"
version = "0.2.0"
description = ""
authors = [
    { name = "Wade", email = "wade@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chardet==5.0.0; python_version == '3.9'",
    "chardet==7.4.3; python_version >= '3.10'",
]

[tool.uv]
package = false
